--- a/mod2_solution/css/index.css
+++ b/mod2_solution/css/index.css
@@ -1,5 +1,70 @@
-div{
-    background-color: aquamarine;
-    width:300px;
-    height: 400px;
+*{
+    box-sizing: border-box;
+}
+body{
+    /*margin-left: 5%;*/
+    padding: 5%;
+        
+}
+div {
+    background-color: gray;
+    border: 5px solid black;
+}
+div>section{
+    width: 30%;
+    border: 2px solid black;
+    margin-left: 70%;
+    text-align: center;
+    border-right: 0px;
+    border-top: 0px;
+}
+h1 {
+    text-align: center;
+}
+#b{
+    background-color: red;
+}
+#s{
+    background-color: yellow;
+}
+#c{
+    background-color: rosybrown;
+}
+
+/*desktop*/
+@media(min-width: 992px){
+    div{
+    width: 30%;
+    float: left;
+    margin-left: 5px;
+    }
+}
+/*tablet*/
+@media(min-width: 768px) and (max-width: 991px){
+    div{
+        margin-bottom: 1%;
+        width: 49%;
+        float: left;
+        margin-left: 0%;
+        margin-right: 0%
+        }
+    #cc{
+        margin-left: 2%;
+    }    
+    #sc{
+        margin-left: 0;
+        width: 100%;
+    }    
+    body{
+        margin: 0;
+    }
+}
+/*phone*/
+@media(max-width: 767px){
+    div{
+        position: relative;
+        margin-bottom: 1px;
+        width: 50%;
+        margin-left: 25%;
+        }
 }
